--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Interconnection 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/interconnection\n"
 "POT-Creation-Date: 2024-05-07T20:39:06+00:00\n"
-"PO-Revision-Date: 2024-05-07 16:40-0400\n"
+"PO-Revision-Date: 2024-07-31 16:43-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.4.4\n"
 "X-Domain: interconnection\n"
 
 #. Theme Name of the theme
@@ -126,7 +126,17 @@ msgstr "Aller au contenu"
 #: inc/template-tags.php:37
 msgctxt "post author"
 msgid "by %s"
-msgstr ""
+msgstr "par %s"
+
+#: inc/template-tags.php:44
+msgctxt "Co-Authors Plus before last separator"
+msgid "and "
+msgstr "et "
+
+#: inc/template-tags.php:45
+msgctxt "Co-Authors Plus before string"
+msgid "by "
+msgstr "par "
 
 #. translators: used between list items, there is a space after the comma
 #: inc/template-tags.php:58
